/*
Demo of RPC access to a signal provided by a server to a client
We group samples or arrays together in a repeated field for efficiency
   but also stream these repeated samples or arrays to handle long signals

Programmer: David G Messerschmitt
16 March 2018
*/

syntax = "proto3";

service SignalServerToClient {

	// Back-and-forth needed to coordinate server with client
	rpc MetaDataCoordination (Config) returns (Info);

	// Signal consisting of a stream of complex-valued samples
	rpc OneDimensionalSignal (Config) returns (stream ComplexSample);

}


message Config {

	// All fields carry a JSON reprsentation of a map (key-value pairs)
	// 	(in Python, this is converted from a dictonary)

	// What info should the server provide or what should the server do?
	string operation = 1;

	// Here are the numerical values of parameters
	string parameters = 2;
	}

message Info {

	// All fields carry a JSON reprsentation of a map (key-value pairs)
	// 	(in Python this is converted from a dictonary)

	// Here is the information requested by the client
	string response = 1;

	// What issues or information not specifically requested 
	//	should the client be aware of?
	string alert = 2;
	}

message ComplexSample {

	// // What issues or information not specifically requested 
	//	should the client be aware of?
	
	repeated Complex sample = 1;

	// What issues should client be aware of?
	string alert = 2;
	}

message Complex {

	float real = 1;
	float imag = 2;
	}